Fix layout issues

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -571,6 +571,7 @@ h6, .h6 { font-size: .75rem }
   max-width: 64em;
   margin-left: auto;
   margin-right: auto;
+  padding: 0 2rem;
 }
 .col {
   float: left;
